welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:11: error: not found: value &
	i = i + &;
                ^